backend/weather-chart/templates/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-redis
  template:
    metadata:
      labels:
        app: weather-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: weather-redis
spec:
  type: ClusterIP
  selector:
    app: weather-redis
  ports:
  - port: 6379
    targetPort: 6379
