backend/weather-chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort
  selector:
    app: weather-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
